--- a/CSS/Pages/home.css
+++ b/CSS/Pages/home.css
@@ -1,5 +1,6 @@
 body {
     background: linear-gradient(135deg, #12345B 0%, #2A7AD5 100%);
+    height: 111vh;
 }
 
 .hero-section {
@@ -208,4 +209,9 @@ body {
 /* Hover to pause */
 .carousel-track:hover {
     animation-play-state: paused;
+}
+
+.footer {
+    background: transparent;
+    border-top: none;
 }
