--- a/CSS/common.css
+++ b/CSS/common.css
@@ -34,6 +34,17 @@ body {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+
 .footer p {
     margin: 0;
+}
+
+.no-scroll {
+    overflow: hidden;
+}
+@media screen and (max-width: 768px) {
+    .footer {
+        padding: 1.5rem 0;
+        font-size: 0.8rem;
+    }
 }
